twitter line on mobile fix

--- a/css/pixyll.css
+++ b/css/pixyll.css
@@ -273,6 +273,10 @@ h6 {
     line-height: 2rem;
   }
 
+  p.twitter-notice {
+    font-size: 1rem;
+  }
+
   .site-header .site-nav {
     display: none;
     width: 100%;
